style(prob1): 코드 스타일 변경