@@ -1,6 +1,5 @@
 package onboarding.problem1;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class PageValidCheckerImp implements PageValidChecker {
@@ -15,10 +14,10 @@ public class PageValidCheckerImp implements PageValidChecker {
 	}
 
 	private boolean checkValidPage(List<Integer> user) {
-		List<Integer> invalidPages = Arrays.asList(1, lastPage);
-		return !user.stream().anyMatch(invalidPages::contains)
-			&& (user.get(1) - user.get(0)) == 1
-			&& ((user.get(0) % 2) == 1) && ((user.get(1) % 2) == 0);
+		List<Integer> invalidPages = List.of(1, lastPage);
+		return user.stream().noneMatch(invalidPages::contains)
+			&& user.get(1) - user.get(0) == 1
+			&& user.get(0) % 2 == 1 && user.get(1) % 2 == 0;
 	}
 
 	public boolean checkValid(List<Integer> user) {
