@@ -2,7 +2,6 @@ package onboarding.problem1;
 
 import static org.assertj.core.api.Assertions.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -21,9 +20,9 @@ class PageValidCheckerTest {
 	@Test
 	void 범위_넘긴_경우_예외() {
 		// given
-		List<Integer> user1 = Arrays.asList(-1, 0);
-		List<Integer> user2 = Arrays.asList(401, 402);
-		List<Integer> user3 = Arrays.asList(301, 302);
+		List<Integer> user1 = List.of(-1, 0);
+		List<Integer> user2 = List.of(401, 402);
+		List<Integer> user3 = List.of(301, 302);
 
 		// when
 		boolean isValid1 = pageValidChecker.checkValid(user1);
@@ -39,9 +38,9 @@ class PageValidCheckerTest {
 	@Test
 	void 첫페이지_마지막페이지_포함_예외() {
 		// given
-		List<Integer> user1 = Arrays.asList(1, 2);
-		List<Integer> user2 = Arrays.asList(399, 400);
-		List<Integer> user3 = Arrays.asList(301, 302);
+		List<Integer> user1 = List.of(1, 2);
+		List<Integer> user2 = List.of(399, 400);
+		List<Integer> user3 = List.of(301, 302);
 
 		// when
 		boolean isValid1 = pageValidChecker.checkValid(user1);
@@ -57,9 +56,9 @@ class PageValidCheckerTest {
 	@Test
 	void 두수가_연속되지않을_경우_예외() {
 		// given
-		List<Integer> user1 = Arrays.asList(3, 6);
-		List<Integer> user2 = Arrays.asList(5, 4);
-		List<Integer> user3 = Arrays.asList(301, 302);
+		List<Integer> user1 = List.of(3, 6);
+		List<Integer> user2 = List.of(5, 4);
+		List<Integer> user3 = List.of(301, 302);
 
 		// when
 		boolean isValid1 = pageValidChecker.checkValid(user1);
@@ -75,9 +74,9 @@ class PageValidCheckerTest {
 	@Test
 	void 홀수_짝수_아닌_경우() {
 		// given
-		List<Integer> user1 = Arrays.asList(4, 5);
-		List<Integer> user2 = Arrays.asList(6, 7);
-		List<Integer> user3 = Arrays.asList(301, 302);
+		List<Integer> user1 = List.of(4, 5);
+		List<Integer> user2 = List.of(6, 7);
+		List<Integer> user3 = List.of(301, 302);
 
 		// when
 		boolean isValid1 = pageValidChecker.checkValid(user1);
